2013-11-01  Per Bothner  <per@bothner.com>

	* DistinctValues.java (consume): Rename to writePosition.
	* RelativeStepFilter.java: Likewise.

2012-07-15  Per Bothner  <per@bothner.com>

	* Makefile.am (SCM_COMPILE_FLAGS): New macro.

	* IntegerRange.java: No longer extend MethodProc.
	(apply): Remove method.
	(integerRange$X): New static method.
	* Xutils.scm (integerRange): New function, uses integerRange$X.

2012-07-14  Per Bothner  <per@bothner.com>

	* SubList.java: Class removed.
	(subList): Moved to SequenceUtils.
	* SequenceUtils.java (subList$X, subList$C): New methods.
	* Makefile.am: Update accordingly.
	* Xutils.scm (sublist): New function.

2012-07-10  Per Bothner  <per@bothner.com>

	* Xutils.scm: Moved from gnu/kawa/slib.
	* Makefile.am: Update accordingly.
	* Xutils.scm (every-or-some-values, every, some): New functions.
	* ValuesEvery.java: Removed class.

2012-03-20  Per Bothner  <per@bothner.com>

	* CompileMisc.java: Add needed setCanRead calls.

2011-03-23  Per Bothner  <per@bothner.com>

	* CompileMisc.java (validateApplyValuesFilter): Use letStart/letVariable
	etc methods instead of creating LetExp directly.
	(validateApplyRelativeStep): Likewise.

2010-09-16  Per Bothner  <per@bothner.com>

	* CompileMisc.java: Update validateApply methods, which no longer
	take a 'boolean argsInlined' parameter.

2010-08-27  Per Bothner  <per@bothner.com>

	* CastableAs.java: Update to use Procedure.validateApplyKey,
	and move inlineXxx method to CompileMisc.
	* CastAs.java: Likewise.
	* CompileMisc.java: New (Moved/renamed) validateXxx methods.

	* ValuesFilter.java: Update to use Procedure.validateApplyKey,
	and move inlineXxx method to CompileMisc.
	* RelativeStep.java: Likewise.
	* OrderedMap.java: Likewise.
	Also move guts of compile method and typeTuples static to CompileMisc.
	* CompileMisc.java: New (Moved/renamed) validateXxx methods.

2010-08-26  Per Bothner  <per@bothner.com>

	* ArithOp.java: Update to use Procedure.validateApplyKey.